2009-11-11  John W. Eaton  <jwe@octave.org>

	* help.cc (do_get_help_text_from_file, Fget_help_text_from_file):
	New functions.
	(do_get_help_text): Pass NAME by const reference.
	* utils.cc (find_dir_in_path): New optional argument "all".
	* load-path.cc (load_path::do_find_matching_dirs): New function.
	(load_path::do_find_dir): Perform match on absolute directory
	names, but return name as it appears in dir_info_list.  Adjust
	dname_len after stripping directory separator.
	* load-path.h (load_path::do_find_matching_dirs): Provide decl.
	(load_path::find_matching_dirs): New function.

2009-11-11  Shai Ayal  <shaiay@users.sourceforge.net>

	* DLD-FUNCTIONS/fltk_backend.cc (Fl_Gl_Window::draw):
	If zooming, call overlay.
	(Fl_Gl_Window::overlay): Rename from draw_overlay.
	Don't return early if zooming.  Don't call valid and conditionally
	call setup_veiwport.  Set overlay color and draw line around zoom
	box.
	(Fl_Gl_Window::zoom_box_vertex): New function.
	(Fl_Gl_Window::pixel2status): Call canvas->redraw, not
	canvas->redraw_overlay.
	
2009-11-10  Shai Ayal  <shaiay@users.sourceforge.net>

	* gl2ps-renderer.cc, gl2ps-renderer.h, gl2ps.c, gl2ps.h:
	New files.  PostScript backend based on opengl_renderer and gl2ps.
	* Makefile.am (octinclude_HEADERS): Add gl2ps.h to the list.
	(DIST_SRC): Add gl2ps.c to the list.
	* gl-render.cc (opengl_renderer::render_text): Rename from
	opengl_renderer::draw_text.
	(opengl_renderer::draw_figure, opengl_renderer::draw_axes,
	opengl_renderer::draw_line, opengl_renderer::draw_surface,
	opengl_renderer::draw_patch, opengl_renderer::draw_hggroup,
	opengl_renderer::draw_text, opengl_renderer::draw_image):
	Rename from overloaded opengl_renderer::draw.
	* gl-render.h: Fix decls.

	* DLD-FUNCTIONS/fltk_backend.cc	(OpenGL_fltk::print): New function.
	(OpenGL_fltk::print_filename): New data member.
	(OpenGL_fltk::draw): Add support for printing.
	(fltk_backend::print_figure): Call figure_manager::print.
